--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -52,7 +52,7 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img: https://forpicgo-1302963684.cos.ap-singapore.myqcloud.com/pic/012542.jpg
+index_img: https://tuapi.eees.cc/api.php?category=dongman&type=302
 
 # If the banner of page not setting, it will show the top_img
 default_top_img:
@@ -88,7 +88,7 @@ cover:
   position: both
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
   default_cover:
-    - https://i.loli.net/2020/05/01/gkihqEjXxJ5UZ1C.jpg
+    - https://tuapi.eees.cc/api.php?category=dongman&type=302
 
 # Replace Broken Images (替換無法顯示的圖片)
 error_img:
