--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -11,6 +11,7 @@ nav:
 menu:
    主页: / || fas fa-home
    归档: /archives/ || fas fa-archive
+   说说: /shuoshuo/ || fas fa-comment
   #  学术主页: https://tangxiangong.me/ || fas fa-user-graduate 
   #  标签: /tags/ || fas fa-tags
   #  类别: /categories/ || fas fa-folder-open
@@ -55,14 +56,14 @@ disable_top_img: false
 index_img: https://tuapi.eees.cc/api.php?category=dongman&type=302
 
 # If the banner of page not setting, it will show the top_img
-default_top_img:
+default_top_img: https://tuapi.eees.cc/api.php?category=dongman&type=302
 
 # The banner image of archive page
-archive_img:
+archive_img: https://tuapi.eees.cc/api.php?category=dongman&type=302
 
 # If the banner of tag page not setting, it will show the top_img
 # note: tag page, not tags page (子標籤頁面的 top_img)
-tag_img:
+tag_img: https://tuapi.eees.cc/api.php?category=dongman&type=302
 
 # The banner image of tag page
 # format:
@@ -608,23 +609,23 @@ site_verification:
 # Theme color for customize
 # Notice: color value must in double quotes like "#000" or may cause error!
 
-# theme_color:
-#   enable: true
-#   main: "#49B1F5"
-#   paginator: "#00c4b6"
-#   button_hover: "#FF7242"
-#   text_selection: "#00c4b6"
-#   link_color: "#99a9bf"
-#   meta_color: "#858585"
-#   hr_color: "#A4D8FA"
-#   code_foreground: "#F47466"
-#   code_background: "rgba(27, 31, 35, .05)"
-#   toc_color: "#00c4b6"
-#   blockquote_padding_color: "#49b1f5"
-#   blockquote_background_color: "#49b1f5"
-#   scrollbar_color: "#49b1f5"
-#   meta_theme_color_light: "ffffff"
-#   meta_theme_color_dark: "#0d0d0d"
+theme_color:
+  enable: true
+  main: "#49B1F5"
+  paginator: "#00c4b6"
+  button_hover: "#FF7242"
+  text_selection: "#00c4b6"
+  link_color: "#99a9bf"
+  meta_color: "#858585"
+  hr_color: "#A4D8FA"
+  code_foreground: "#F47466"
+  code_background: "rgba(27, 31, 35, .05)"
+  toc_color: "#00c4b6"
+  blockquote_padding_color: "#49b1f5"
+  blockquote_background_color: "#49b1f5"
+  scrollbar_color: "#49b1f5"
+  meta_theme_color_light: "ffffff"
+  meta_theme_color_dark: "#0d0d0d"
 
 # The top_img settings of home page
 # default: top img - full screen, site info - middle (默認top_img全屏，site_info在中間)
@@ -661,7 +662,7 @@ enter_transitions: true
 # Typewriter Effect (打字效果)
 # https://github.com/disjukr/activate-power-mode
 activate_power_mode:
-  enable: false
+  enable: true
   colorful: true # open particle animation (冒光特效)
   shake: true #  open shake (抖動特效)
   mobile: false
@@ -696,7 +697,7 @@ canvas_nest:
 
 # Mouse click effects: fireworks (鼠標點擊效果: 煙火特效)
 fireworks:
-  enable: false
+  enable: true
   zIndex: 9999 # -1 or 9999
   mobile: false
 
@@ -771,15 +772,15 @@ preloader:
   # source
   # 1. fullpage-loading
   # 2. pace (progress bar)
-  source: 2
+  source: 1
   # pace theme (see https://codebyzach.github.io/pace/)
-  pace_css_url: https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css
+  # pace_css_url: https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css
 
 # wordcount (字數統計)
 # see https://butterfly.js.org/posts/ceeb73f/#字數統計
 wordcount:
   enable: false
-  post_wordcount: true
+  post_wordcount: false
   min2read: true
   total_wordcount: true
 
@@ -867,10 +868,10 @@ pangu:
 # Lazyload (圖片懶加載)
 # https://github.com/verlok/vanilla-lazyload
 lazyload:
-  enable: false
+  enable: true
   field: site # site/post
   placeholder:
-  blur: false
+  blur: true
 
 # PWA
 # See https://github.com/JLHwung/hexo-offline
@@ -908,6 +909,16 @@ inject:
   bottom:
     # - <script src="xxxx"></script>
 
+# Artitalk
+# see https://artitalk.js.org/
+artitalk:
+  enable: true
+  appId: 2KAf53IVKEw2QDAC3LRCWl5P-MdYXbMMI
+  appKey: NtVrCh7tvIxqeovyQUwUAbn1
+  path:
+  js:
+  option:
+  front_matter:
 # CDN
 # Don't modify the following settings unless you know how they work
 # 非必要請不要修改
