--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,13 @@
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
+bangumi:
+  enable: true
+  vmid: 254144429
+  title: "追番列表"
+  quote: "生命不息, 追番不止"
+
+
 # Site
 title: 小雨的空间
 subtitle: '保持可爱'
@@ -29,6 +36,10 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+
+aplayer:
+  meting: true
+  asset_inject: false
 
 # Writing
 new_post_name: :title.md # File name of new posts
