--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -35,6 +35,8 @@ nav:
         - name: 学术主页
           link: https://tangxiangong.me/
           icon: 
+    - title:
+      item:
         - name: 学术博客
           link: https://tangxiangong.me/post/
           icon:
@@ -430,6 +432,10 @@ footer:
   runtime:
     enable: true
     launch_time: 09/01/2023 12:00:00 # 网站上线时间
+    # work_img: https://npm.elemecdn.com/anzhiyu-blog@2.0.4/img/badge/安知鱼-上班摸鱼中.svg
+    work_description: 大家早上、中午、下午好！
+    # offduty_img: https://npm.elemecdn.com/anzhiyu-blog@2.0.4/img/badge/安知鱼-下班啦.svg
+    offduty_description: 大家晚上好！
   # 徽标部分配置项 https://shields.io/
   # https://img.shields.io/badge/CDN-jsDelivr-orange?style=flat&logo=jsDelivr
   bdageitem:
